--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,9 +2,9 @@ version: 1
 datastore: 
   user: 'user'
   password: 'Password'
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: 'microservice-henrik.eastus.cloudapp.azure.com'
   port: 3306
-  db: events
+  db: 'events'
   
 events:
   hostname: microservice-henrik.eastus.cloudapp.azure.com
