--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -45,27 +45,27 @@ services:
       - my-db:/var/lib/mysql
   
   receiver:
-    image: receiver
+    image: receiver:lastest
     ports:
       - "8080:8080"
     depends_on: 
       - "kafka"
   
   storage:
-    image: storage
+    image: storage:lastest
     ports: 
       - "8090:8090"
     depends_on:
       - "kafka"
   
   processing:
-    image: processing
+    image: processing:lastest
     network_mode: "host"
     depends_on:
       - "storage"
   
   audit_log:
-    image: audit_log
+    image: audit_log:lastest
     ports:
       - "8200:8200"
     depends_on:
