--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,11 +2,11 @@ version: 1
 datastore: 
   user: user
   password: Password
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: localhost
   port: 3306
   db: events
   
 events:
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: localhost
   port: 9092
   topic: events
