--- a/dashboard-ui/Dockerfile
+++ b/dashboard-ui/Dockerfile
@@ -10,7 +10,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # Install app dependencies
 COPY package.json ./
-COPY package-lock.jsonn ./
+COPY package-lock.json ./
 RUN npm install
 RUN npm install react-scripts@3.4.1 -g    
 
