--- a/receiver/app_conf.yml
+++ b/receiver/app_conf.yml
@@ -8,6 +8,6 @@ get_online_sales:
 online_sales: 
   url: http://localhost:8090/sales/online
 events: 
-  hostname: localhost
+  hostname: deployment_default
   port: 9092 
   topic: events
