--- a/audit_log/app_conf.yml
+++ b/audit_log/app_conf.yml
@@ -8,6 +8,6 @@ get_online_sales:
 online_sales: 
   url: http://localhost:8090/sales/online
 events: 
-  hostname: 192.168.0.200
+  hostname: deployment_kafka_1
   port: 9092 
   topic: events
