--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -1,8 +1,8 @@
 version: 1 
 datastore: 
   user: user
-  password: 192.168.0.200
-  hostname: localhost
+  password: Password
+  hostname: 192.168.0.200
   port: 3306
   db: events
   
