--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -10,3 +10,8 @@ events:
   hostname: microservice-henrik.eastus.cloudapp.azure.com
   port: 9092
   topic: events
+
+connecting_kafka:
+  retry_count_max: 10
+  time_sleep: 5
+  
