--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -54,6 +54,10 @@
       image: receiver:latest 
       ports:
         - "8080:8080"
+      environment:
+        - TARGET_ENV=test
+      volumes:
+        - /home/henrik/config/receiver:/config
       depends_on: 
         - "kafka"
     
@@ -62,6 +66,10 @@
       image: storage:latest
       ports: 
         - "8090:8090"
+      environment:
+        - TARGET_ENV=test
+      volumes:
+        - /home/henrik/config/storage:/config
       depends_on:
         - "kafka"
     
@@ -69,6 +77,10 @@
       build: ../processing
       image: processing:latest
       network_mode: "host"
+      environment:
+        - TARGET_ENV=test
+      volumes:
+        - /home/henrik/config/processing:/config
       depends_on:
         - "storage"
     
@@ -77,6 +89,10 @@
       image: audit_log:latest
       ports:
         - "8200:8200"
+      environment:
+        - TARGET_ENV=test
+      volumes:
+        - /home/henrik/config/audit_log:/config
       depends_on:
         - "kafka"
     
