--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -5,8 +5,8 @@
       ports:
         - "2181"
       hostname: zookeeper
-      volumes:
-        - /home/henrik/zookeeper/data:/opt/zookeeper-3.4.13/data #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
+      volumes: #CHANGE THE USER TO VM USER
+        - /home/azureuser/zookeeper/data:/opt/zookeeper-3.4.13/data #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
     kafka:
       image: wurstmeister/kafka
       command: [start-kafka.sh]
@@ -15,17 +15,17 @@
       hostname: kafka
       environment:
         KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas 
-        KAFKA_ADVERTISED_HOST_NAME: microservice-henrik.eastus.cloudapp.azure.com # docker-machine ip
+        KAFKA_ADVERTISED_HOST_NAME: microservice-azureuser.eastus.cloudapp.azure.com # docker-machine ip
         KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092 
         KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-        KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://microservice-henrik.eastus.cloudapp.azure.com:9092 
+        KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://microservice-azureuser.eastus.cloudapp.azure.com:9092 
         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT 
         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181   #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
         KAFKA_LOG_DIRS: /kafka/kafka-logs   #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
         KAFKA_BROKER_ID: 1
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock 
-        - /home/henrik/kafka:/kafka/kafka-logs #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
+        - /home/azureuser/kafka:/kafka/kafka-logs #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
       depends_on:
         - "zookeeper"
     db:
@@ -57,8 +57,8 @@
       environment:
         - TARGET_ENV=test
       volumes:
-        - /home/henrik/config/receiver:/config
-        - /home/henrik/logs:/logs
+        - /home/azureuser/config/receiver:/config
+        - /home/azureuser/logs:/logs
       depends_on: 
         - "kafka"
     
@@ -70,8 +70,8 @@
       environment:
         - TARGET_ENV=test
       volumes:
-        - /home/henrik/config/storage:/config
-        - /home/henrik/logs:/logs
+        - /home/azureuser/config/storage:/config
+        - /home/azureuser/logs:/logs
       depends_on:
         - "kafka"
     
@@ -82,8 +82,8 @@
       environment:
         - TARGET_ENV=test
       volumes:
-        - /home/henrik/config/processing:/config
-        - /home/henrik/logs:/logs
+        - /home/azureuser/config/processing:/config
+        - /home/azureuser/logs:/logs
         - processing-db:/data
       depends_on:
         - "storage"
@@ -96,8 +96,8 @@
       environment:
         - TARGET_ENV=test
       volumes:
-        - /home/henrik/config/audit_log:/config
-        - /home/henrik/logs:/logs
+        - /home/azureuser/config/audit_log:/config
+        - /home/azureuser/logs:/logs
       depends_on:
         - "kafka"
     
