--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,12 +2,12 @@ version: 1
 datastore: 
   user: user
   password: Password
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: <DNS of your Azure VM>
   port: 3306
   db: events
   
 events:
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: <DNS of your Azure VM>
   port: 9092
   topic: events
 
