--- a/processing/app_conf.yml
+++ b/processing/app_conf.yml
@@ -4,7 +4,7 @@ datastore:
 scheduler: 
   period_sec: 5 
 evenstore:
-  url: http://localhost:8090/
+  url: < DNS of the VM>
 # get_instore_sales: 
 #   url: http://localhost:8090/sales/instore?timestamp=  
 # get_online_sales:
