--- a/storage/app_conf.yml
+++ b/storage/app_conf.yml
@@ -2,12 +2,12 @@ version: 1
 datastore: 
   user: user
   password: Password
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: "microservice-week9.eastus.cloudapp.azure.com"
   port: 3306
   db: events
   
 events:
-  hostname: microservice-henrik.eastus.cloudapp.azure.com
+  hostname: "microservice-week9.eastus.cloudapp.azure.com"
   port: 9092
   topic: events
 
