debug: typo cl_data, and in blood_sugar.py

--- a/processing/app_conf.yml
+++ b/processing/app_conf.yml
@@ -3,8 +3,8 @@ datastore:
   filename: data.json 
 scheduler: 
   period_sec: 5 
-evenstore:
-  url: http://localhost:8090/
+eventstore:
+  url: http://localhost:8090
 # get_instore_sales: 
 #   url: http://localhost:8090/sales/instore?timestamp=  
 # get_online_sales:
