--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -5,7 +5,7 @@
       ports:
         - "2181"
       hostname: zookeeper
-      volumes: #CHANGE THE USER TO VM USER
+      volumes:
         - /home/azureuser/zookeeper/data:/opt/zookeeper-3.4.13/data #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
     kafka:
       image: wurstmeister/kafka
@@ -15,10 +15,10 @@
       hostname: kafka
       environment:
         KAFKA_CREATE_TOPICS: "events:1:1" # topic:partition:replicas 
-        KAFKA_ADVERTISED_HOST_NAME: microservice-azureuser.eastus.cloudapp.azure.com # docker-machine ip
-        KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092 
+        KAFKA_ADVERTISED_HOST_NAME: "microservice-jasleen-new.eastus.cloudapp.azure.com" # docker-machine ip
+        KAFKA_LISTENERS: INSIDE://:29092,OUTSIDE://:9092
         KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-        KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://microservice-azureuser.eastus.cloudapp.azure.com:9092 
+        KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:29092,OUTSIDE://microservice-jasleen-new.eastus.cloudapp.azure.com:9092 
         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT 
         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181   #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
         KAFKA_LOG_DIRS: /kafka/kafka-logs   #This makes Kafka Topics Are Persisting (This was not here before to intentionally done to allow for debugging and troubleshooting without having to deal with old data in the Kafka message queue.) 9*2
