--- a/receiver/app_conf.yml
+++ b/receiver/app_conf.yml
@@ -1,8 +1,8 @@
 version: 1
-report_blood_sugar_reading:
-  url: http://localhost:8080/readings/blood-sugar
-report_cortisol_level_reading:
-  url: http://localhost:8080/readings/cortisol-level
+personal_information:
+  url: http://localhost:8080/readings/personal_information
+start_end_date:
+  url: http://localhost:8080/readings/start_end_date
 events: 
   hostname: <DNS of your Azure VM>
   port: 9092 
