--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,7 +31,8 @@ services:
   db:
     image: mysql:5.7
     restart: always
-    environment:
+    envir
+    onment:
       MYSQL_DATABASE: 'events'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
