--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,8 +31,7 @@ services:
   db:
     image: mysql:5.7
     restart: always
-    envir
-    onment:
+    environment:
       MYSQL_DATABASE: 'events'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
