--- a/processing/Dockerfile
+++ b/processing/Dockerfile
@@ -10,7 +10,8 @@ COPY ./requirements.txt /app/requirements.txt
 
 WORKDIR /app
 
-RUN pip3 install -r requirements.txt 
+RUN pip3 install -r re
+quirements.txt 
 
 COPY . /app
 
