--- a/processing/Dockerfile
+++ b/processing/Dockerfile
@@ -10,8 +10,7 @@ COPY ./requirements.txt /app/requirements.txt
 
 WORKDIR /app
 
-RUN pip3 install -r requirem
-ents.txt 
+RUN pip3 install -r requirements.txt 
 
 COPY . /app
 
