--- a/processing/Dockerfile
+++ b/processing/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update -y && \
       apt-get install -y python3 python3-pip
 
 # We copy just the requirements.txt first to leverage Docker cache 
-COPY ./requirements.txt /app/requirements.txt
+COPY ./requirements.txt /a
+pp/requirements.txt
 
 WORKDIR /app
 
